# kamaitachi

./: Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs
src/config/: mod.rs  settings.rs
src/ffmpeg/: detector.rs  downloader.rs  mod.rs
src/transcoder/: error.rs  hwaccel.rs  job.rs  mod.rs  preset.rs  progress.rs
src/ui/: about_dialog.rs  file_list.rs  main_window.rs  mod.rs  progress_view.rs  settings_panel.rs
