[package]
name = "kamaitachi"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "HandBrake alternative high-speed transcoder"
authors = ["yuubinnkyoku"]

[dependencies]
# UI
gpui = "0.2.2"
gpui-component = "0.4.2"

# FFmpeg - システムのFFmpegを使用
# ez-ffmpeg = { version = "0.6", features = ["static"] }

# ファイルダイアログ
rfd = "0.14"

# 非同期（GPUIと互換性のあるsmolを使用）
smol = "2"

# ユーティリティ
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
zip = "2"
log = "0.4"
env_logger = "0.11"
